--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,3 +19,8 @@ jobs:
       run: sudo apt-get install lld clang
     - name: build
       run: ./build.sh wasm32; # ./build.sh wasm64
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - run: git push origin HEAD:v$(cat ./version)
+
