--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -22,5 +22,5 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - run: git push origin HEAD:v$(cat ./version)
+    - run: git push origin master
 
