--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - name: addpkgs
       run: sudo apt-get install lld clang
     - name: build
-      run: ./build.sh wasm32; # ./build.sh wasm64
+      run: ./build.sh wasm32; ls # ./build.sh wasm64
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
