--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,9 +18,4 @@ jobs:
     - name: addpkgs
       run: sudo apt-get install lld clang
     - name: build
-      run: ./build.sh wasm32; # ./build.sh wasm64
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - run: ls; git push origin main
-
+      run: ./build.sh wasm32; git push origin main # ./build.sh wasm64
