--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,3 +19,10 @@ jobs:
       run: sudo apt-get install lld clang
     - name: build
       run: ./build.sh wasm32; # ./build.sh wasm64
+      uses: marvinpinto/action-automatic-releases@v1.2.1
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: false
+        title: WCLibC
+        files: wclibc-*
