--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - name: addpkgs
       run: sudo apt-get install lld clang
     - name: build
-      run: cat version | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{if(length($NF+1)>length($NF))$(NF-1)++; $NF=sprintf("%0*d", length($NF), ($NF+1)%(10^length($NF))); print}' > ./version; git push; ./build.sh wasm32; # ./build.sh wasm64
+      run: ./build.sh wasm32; # ./build.sh wasm64
     - name: push
       uses: marvinpinto/action-automatic-releases@v1.2.1
       with:
