--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,8 +18,16 @@ jobs:
     - name: addpkgs
       run: sudo apt-get install lld clang
     - name: build
-      run: ./build.sh wasm32; # ./build.sh wasm64
+      run: ./build.sh wasm32; ./update_ver.sh; export VERSION=$(cat version) # ./build.sh wasm64
     - name: push
+      uses: marvinpinto/action-automatic-releases@v1.2.1
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "${{ env.VERSION }}"
+        prerelease: false
+        title: WCLibC
+        files: wclibc-*
+    - name: push 2
       uses: marvinpinto/action-automatic-releases@v1.2.1
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
