--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,5 +25,5 @@ jobs:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: latest
         prerelease: false
-        title: "WCLibC v${{ env.VERSION }}"
+        title: "WCLibC ${{ env.VERSION }}"
         files: wclibc-*
